--- a/Orientation-API/Views/Shared/_Layout.cshtml
+++ b/Orientation-API/Views/Shared/_Layout.cshtml
@@ -19,7 +19,9 @@
                 @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav"></ul>
+                <ul class="nav navbar-nav">
+                    <li><a ng-href="#!/computers">Computers</a></li>
+                </ul>
             </div>
         </div>
     </div>
