--- a/Orientation-API/app/partials/departments.html
+++ b/Orientation-API/app/partials/departments.html
@@ -1,10 +1,7 @@
-﻿<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <title></title>
-</head>
-<body>
+﻿<h2>
+    {{message}}
+</h2>
 
-</body>
-</html>
+<ul>
+    <li ng-repeat="department in departments">{{department.DepartmentName}}</li>
+</ul>
