departments now showing up in browser and nav bar has departments tab

--- a/Orientation-API/app/partials/departments.html
+++ b/Orientation-API/app/partials/departments.html
@@ -1,7 +1,18 @@
 ﻿<h2>
-    {{message}}
+    Departments
 </h2>
 
 <ul>
     <li ng-repeat="department in departments">{{department.DepartmentName}}</li>
 </ul>
+
+<!--<div>
+    <table class="table table-hover">
+        <tr>
+            <td>Department Name</td>
+        </tr>
+        <tr ng-repeat="department in departments">
+            <td>{{department.DepartmentName}}</td>
+        </tr>
+    </table>
+</div>-->
