--- a/Orientation-API/Views/Shared/_Layout.cshtml
+++ b/Orientation-API/Views/Shared/_Layout.cshtml
@@ -21,6 +21,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a ng-href="#!/computers">Computers</a></li>
+                    <li><a ng-href="#!/departments">Departments</a></li>
                 </ul>
             </div>
         </div>
