--- a/Orientation-API/app/partials/create-department.html
+++ b/Orientation-API/app/partials/create-department.html
@@ -2,8 +2,10 @@
     Create a New Department
 </h2>
 
-<p>{{message}}</p>
-
 <form action="/" method="post">
-
+    <div class="form-group">
+        <label for="departmentName">Department Name</label>
+        <input type="text" class="form-control" id="departmentName" placeholder="">
+    </div>
+    <button class="btn btn-success">Create New Department</button>
 </form>
