--- a/Orientation-API/app/partials/create-department.html
+++ b/Orientation-API/app/partials/create-department.html
@@ -2,7 +2,7 @@
     Create a New Department
 </h2>
 
-<form action="/" method="post">
+<form ng-submit="submitForm()" action="/" method="post">
     <div class="form-group">
         <label for="departmentName">Department Name</label>
         <input type="text" class="form-control" id="departmentName" placeholder="">
