--- a/Orientation-API/app/partials/departments.html
+++ b/Orientation-API/app/partials/departments.html
@@ -4,6 +4,7 @@
 
 <div class="p-bottom">
     <button class="btn btn-primary">Create New Department</button>
+    <a ng-href="#!/create-department" class="btn btn-primary">Create New Department</a>
 </div>
 
 <div>
