--- a/Orientation-API/app/partials/computers.html
+++ b/Orientation-API/app/partials/computers.html
@@ -1,6 +1,7 @@
 ﻿<h2>Computers</h2>
 
 <div>
+    <button ng-click="createComputer()" type="button" class="btn btn-info">Create a new computer</button>
     <table class="table table-hover">
         <tr>
             <td>Computer Manufacturer</td>
