able to get to new computer form

--- a/Orientation-API/app/partials/computers.html
+++ b/Orientation-API/app/partials/computers.html
@@ -1,7 +1,10 @@
 ﻿<h2>Computers</h2>
 
+<div class="create">
+    <button type="button" class="btn btn-info col-sm-2 col-sm-offset-10" ng-click="createComputer()">Create a new computer</button>
+</div>
+
 <div>
-    <button ng-click="createComputer()" type="button" class="btn btn-info">Create a new computer</button>
     <table class="table table-hover">
         <tr>
             <td>Computer Manufacturer</td>
