--- a/Orientation-API/Views/Shared/_Layout.cshtml
+++ b/Orientation-API/Views/Shared/_Layout.cshtml
@@ -22,6 +22,7 @@
                 <ul class="nav navbar-nav">
                     <li><a ng-href="#!/computers">Computers</a></li>
                     <li><a ng-href="#!/departments">Departments</a></li>
+                    <li><a ng-href="#!/employees">Employees</a></li>
                 </ul>
             </div>
         </div>
