--- a/Orientation-API/app/partials/newcomputer.html
+++ b/Orientation-API/app/partials/newcomputer.html
@@ -1,22 +1,22 @@
-﻿<div class="text-center" id="new-contacts" ng-controller="NewComputerController">
+﻿<div class="text-center" id="new-computer" ng-controller="NewComputerController">
     <div>
-        <form class="form-horizontal" name="newcomputer" ng-submit="submitForm()">
+        <form class="form-horizontal text-center" name="addcomputer" ng-submit="submitForm()">
             <div class="form-group">
                 <label for="computer_manufacturer" class="col-sm-2 control-label">Computer Manufacturer</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" id="computer_manufacturer" placeholder="Computer Manufacturer" ng-model="newcomputer.computermanufacturer" required>
+                    <input type="text" class="form-control" id="computer_manufacturer" placeholder="Computer Manufacturer" ng-model="addcomputer.computermanufacturer" required>
                 </div>
             </div>
             <div class="form-group">
                 <label for="computer_make" class="col-sm-2 control-label">Computer Make</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" id="computer_make" placeholder="Computer Make" ng-model="newcomputer.computermake" required>
+                    <input type="text" class="form-control" id="computer_make" placeholder="Computer Make" ng-model="addcomputer.computermake" required>
                 </div>
             </div>
             <div class="form-group">
-                <label for="phone_number" class="col-sm-2 control-label"><i class="fa fa-phone" aria-hidden="true"></i></label>
+                <label for="purchase_date" class="col-sm-2 control-label">Purchase Date</label>
                 <div class="col-sm-10">
-                    <input type="tel" class="form-control" id="phone_number" placeholder="Phone Number" ng-model="newcontact.phonenumber" required>
+                    <input type="date" class="form-control" id="purchase_date" placeholder="Purchase Date" ng-model="addcomputer.purchasedate" required>
                 </div>
             </div>
             <div class="form-group">
