finished the create computer feature

--- a/Orientation-API/app/partials/computers.html
+++ b/Orientation-API/app/partials/computers.html
@@ -1,7 +1,7 @@
 ﻿<h2>Computers</h2>
 
 <div class="create">
-    <button type="button" class="btn btn-info col-sm-2 col-sm-offset-10" ng-click="createComputer()">Create a new computer</button>
+    <button type="button" class="btn btn-info col-sm-2 col-sm-offset-10 add-computer" ng-click="createComputer()">Create a new computer</button>
 </div>
 
 <div>
