one small copy change

--- a/Orientation-API/app/partials/computers.html
+++ b/Orientation-API/app/partials/computers.html
@@ -7,9 +7,9 @@
 <div>
     <table class="table table-hover">
         <tr>
-            <td>Computer Manufacturer</td>
-            <td>Computer Make</td>
-            <td>Purchase Date</td>
+            <th>Computer Manufacturer</th>
+            <th>Computer Make</th>
+            <th>Purchase Date</th>
         </tr>
         <tr ng-repeat="computer in computers">
             <td>{{computer.ComputerManufacturer}}</td>
