--- a/Orientation-API/Views/Shared/_Layout.cshtml
+++ b/Orientation-API/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
                 <ul class="nav navbar-nav">
                     <li><a ng-href="#!/computers">Computers</a></li>
                     <li><a ng-href="#!/departments">Departments</a></li>
-                        <select>poop</select>
+                    <li><a ng-href="#!/trainings">Trainings</a><li>
                 </ul>
             </div>
         </div>
