--- a/Orientation-API/app/partials/create-department.html
+++ b/Orientation-API/app/partials/create-department.html
@@ -1,11 +1,13 @@
-﻿<h2>
-    Create a New Department
-</h2>
+﻿<h2>Create a New Department</h2>
 
-<form ng-submit="submitForm()" action="/" method="post">
-    <div class="form-group">
-        <label for="departmentName">Department Name</label>
-        <input type="text" class="form-control" id="departmentName" placeholder="">
+<div class="container">
+    <div ng-controller="CreateDepartmentController">
+        <form name="adddepartment" ng-submit="submitForm()">
+            <div class="form-group">
+                <label for="departmentName">Department Name</label>
+                <input type="text" class="form-control" id="departmentName" placeholder="" ng-model="adddepartment.departmentname" required>
+            </div>
+            <button type="submit" class="btn btn-success">Create New Department</button>
+        </form>
     </div>
-    <button class="btn btn-success">Create New Department</button>
-</form>
+</div>
