--- a/Orientation-API/app/partials/departments.html
+++ b/Orientation-API/app/partials/departments.html
@@ -6,7 +6,7 @@
     <a ng-href="#!/create-department" class="btn btn-primary">Create New Department</a>
 </div>
 
-<div>
+<div class="row">
     <div ng-repeat="department in departments" class="col-md-3">
         <p>{{department.DepartmentName}}</p>
     </div>
