--- a/Orientation-API/app/partials/computers.html
+++ b/Orientation-API/app/partials/computers.html
@@ -5,16 +5,18 @@
 </div>
 
 <div>
-    <table class="table table-hover">
+    <table class="table table-striped">
         <tr>
             <th>Computer Manufacturer</th>
             <th>Computer Make</th>
             <th>Purchase Date</th>
+            <th></th>
         </tr>
         <tr ng-repeat="computer in computers">
             <td>{{computer.ComputerManufacturer}}</td>
             <td>{{computer.ComputerMake}}</td>
             <td>{{computer.PurchaseDate}}</td>
+            <td><button class="btn btn-danger" ng-click="deleteComputer(computer.ComputerId)">Delete</button></td>
         </tr>
     </table>
 </div>
