an see list of trainings and create new one

--- a/Orientation-API/app/partials/trainingPrograms.html
+++ b/Orientation-API/app/partials/trainingPrograms.html
@@ -19,5 +19,5 @@
             <td>{{training.MaxAttendees}}</td>
         </tr>
     </table>
-    <div><button>create</button></div>
+    <div><button ng-click="createTraining(training.TrainingId)">create</button></div>
 </div>
