works on my machine

--- a/Orientation-API/Views/Shared/_Layout.cshtml
+++ b/Orientation-API/Views/Shared/_Layout.cshtml
@@ -23,6 +23,8 @@
                     <li><a ng-href="#!/computers">Computers</a></li>
                     <li><a ng-href="#!/departments">Departments</a></li>
                     <li><a ng-href="#!/employees">Employees</a></li>
+                    <li><a ng-href="#!/trainings">Trainings</a></li>
+                    
                 </ul>
             </div>
         </div>
