--- a/Orientation-API/app/partials/employees.html
+++ b/Orientation-API/app/partials/employees.html
@@ -1,7 +1,9 @@
 ﻿<h2>Current Employees</h2>
 
 <div>
-    
+    <div>
+        <button type="button" class="btn btn-primary" ng-click="AddNewEmployee()">Add New Employee</button>
+    </div>
 
     <table class="table table-striped">
         <tr>
