added bootstrap button class to Create button on Training Programs page

--- a/Orientation-API/app/partials/TrainingPrograms.html
+++ b/Orientation-API/app/partials/TrainingPrograms.html
@@ -19,5 +19,5 @@
             <td>{{training.MaxAttendees}}</td>
         </tr>
     </table>
-    <div><button ng-click="createTraining(training.TrainingId)">create</button></div>
+    <div><button class="btn btn-success" ng-click="createTraining(training.TrainingId)">create</button></div>
 </div>
