--- a/Orientation-API/app/partials/TrainingPrograms.html
+++ b/Orientation-API/app/partials/TrainingPrograms.html
@@ -17,7 +17,8 @@
             <td>{{training.StartDay}}</td>
             <td>{{training.EndDay}}</td>
             <td>{{training.MaxAttendees}}</td>
+            <td><button class="btn btn-danger btn-sm" ng-click="">Delete</button></td>
         </tr>
     </table>
-    <div><button class="btn btn-success" ng-click="createTraining(training.TrainingId)">create</button></div>
+    <div><button class="btn btn-success" ng-click="createTraining(training.TrainingId)">Create</button></div>
 </div>
