--- a/Orientation-API/app/partials/TrainingPrograms.html
+++ b/Orientation-API/app/partials/TrainingPrograms.html
@@ -17,6 +17,7 @@
             <td>{{training.StartDay}}</td>
             <td>{{training.EndDay}}</td>
             <td>{{training.MaxAttendees}}</td>
+            <td><button class="btn btn-primary btn-sm" ng-click="">View Details</button></td>
             <td><button class="btn btn-danger btn-sm" ng-click="">Delete</button></td>
         </tr>
     </table>
