View Details button now routes to the details page

--- a/Orientation-API/app/partials/TrainingPrograms.html
+++ b/Orientation-API/app/partials/TrainingPrograms.html
@@ -17,7 +17,7 @@
             <td>{{training.StartDay}}</td>
             <td>{{training.EndDay}}</td>
             <td>{{training.MaxAttendees}}</td>
-            <td><button class="btn btn-primary btn-sm" ng-click="">View Details</button></td>
+            <td><a ng-href="#!/trainings/details" class="btn btn-primary btn-sm">View Details</a></td>
             <td><button class="btn btn-danger btn-sm" ng-click="">Delete</button></td>
         </tr>
     </table>
