--- a/Orientation-API/app/partials/newemployee.html
+++ b/Orientation-API/app/partials/newemployee.html
@@ -12,7 +12,7 @@
             </div>
             <div class="form-group">
                 <label for="exampleInputFile">Hire Date</label>
-                <input type="date" id="hireDate">
+                <input type="date" id="hireDate" ng-model="newEmployee.HireDate">
             </div>
             <div>
                 <select ng-model="newEmployee.DepartmentId">
