--- a/Orientation-API/app/partials/createTraining.html
+++ b/Orientation-API/app/partials/createTraining.html
@@ -24,8 +24,14 @@
                 <input type="text" class="form-control" ng-model="training.maxAttendees" placeholder="Max Attendees" required>
             </div>
         </div>
+        <div class="form-group">
+            <label for="details" class="col-sm-2 control-label">Details:</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" id="details" ng-model="training.details" placeholder="Details">
+            </div>
+        </div>
 
-    
+
         <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
                 <button type="submit" class="btn btn-default" ng-click="addTraining(training)">Add Training</button>
