--- a/Orientation-API/app/partials/employees.html
+++ b/Orientation-API/app/partials/employees.html
@@ -9,7 +9,7 @@
             <th>Department</th>
         </tr>
         <tr ng-repeat="employee in employees | orderBy: 'EmployeeName'">
-            <td>{{employee.EmployeeName}}</td>
+            <td><a ng-click="employeeDetails(employee.EmployeeId)" >{{employee.EmployeeName}}</a></td>
             <td>{{employee.DepartmentName}}</td>
         </tr>
     </table>
