added EmployeeTrainingDto and added the Employees td to the Training Program Details page

--- a/Orientation-API/app/partials/TrainingProgramDetails.html
+++ b/Orientation-API/app/partials/TrainingProgramDetails.html
@@ -23,7 +23,11 @@
             <td>{{training.Details}}</td>
         </tr>
         <tr>
-            <td><button class="btn btn-success btn-sm" ng-click="">Edit</button></td>
+            <th>Employees Attending:</th>
+            <td></td>
+        </tr>
+        <tr>
+            <td colspan="2"><button class="btn btn-success btn-sm" ng-click="">Edit</button></td>
         </tr>
     </table>
 </div>
