--- a/Orientation-API/app/partials/TrainingProgramEdit.html
+++ b/Orientation-API/app/partials/TrainingProgramEdit.html
@@ -32,11 +32,17 @@
                 <input type="text" class="form-control" id="details" ng-model="training.details" placeholder="Details">
             </div>
         </div>
+        <div class="form-group">
+            <label for="employeesAttending" class="col-sm-2 control-label">Details:</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" id="employeesAttending" ng-model="training.details" placeholder="Details">
+            </div>
+        </div>
 
 
         <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
-                <button type="submit" class="btn btn-default" ng-click="">Update</button>
+                <button type="submit" class="btn btn-default" ng-click="updateTraining(training)">Update</button>
             </div>
         </div>
     </form>
