--- a/Orientation-API/app/partials/TrainingProgramEdit.html
+++ b/Orientation-API/app/partials/TrainingProgramEdit.html
@@ -5,39 +5,39 @@
         <div class="form-group">
             <label for="firstName" class="col-sm-2 control-label">Training Name</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" id="firstName" ng-model="training.trainingName" placeholder="Name" required>
+                <input type="text" class="form-control" id="firstName" ng-model="training.TrainingName" placeholder="Name" required>
             </div>
         </div>
         <div class="form-group">
             <label for="inputEmail3" class="col-sm-2 control-label">Start Day:</label>
             <div class="col-sm-10">
-                <input type="date" class="form-control" ng-model="training.startDay" placeholder="0000/00/00" required>
+                <input type="date" class="form-control" ng-model="training.StartDay" placeholder="0000/00/00" required>
             </div>
         </div>
         <div class="form-group">
             <label for="inputEmail3" class="col-sm-2 control-label">End Day:</label>
             <div class="col-sm-10">
-                <input type="date" class="form-control" ng-model="training.endDay" placeholder="0000/00/00" required>
+                <input type="date" class="form-control" ng-model="training.EndDay" placeholder="0000/00/00" required>
             </div>
         </div>
         <div class="form-group">
             <label for="inputEmail3" class="col-sm-2 control-label">Max number of Attendees:</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" ng-model="training.maxAttendees" placeholder="Max Attendees" required>
+                <input type="text" class="form-control" ng-model="training.MaxAttendees" placeholder="Max Attendees" required>
             </div>
         </div>
         <div class="form-group">
             <label for="details" class="col-sm-2 control-label">Details:</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" id="details" ng-model="training.details" placeholder="Details">
+                <input type="text" class="form-control" id="details" ng-model="training.Details" placeholder="Details">
             </div>
         </div>
-        <div class="form-group">
-            <label for="employeesAttending" class="col-sm-2 control-label">Details:</label>
+        <!--<div class="form-group">
+            <label for="employeesAttending" class="col-sm-2 control-label">Employees Attending:</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" id="employeesAttending" ng-model="training.details" placeholder="Details">
+                <input type="text" class="form-control" id="employeesAttending" ng-model="training.etails" placeholder="Employees Attending">
             </div>
-        </div>
+        </div>-->
 
 
         <div class="form-group">
