employeeTraining card working

--- a/Orientation-API/app/partials/employeeDetails.html
+++ b/Orientation-API/app/partials/employeeDetails.html
@@ -1,1 +1,8 @@
-﻿<h1 >adsfasdfsadf</h1>
+﻿<div>
+    <h1>{{employee.FirstName}} {{employee.LastName}}</h1>
+    <h2>{{employee.DepartmentName}}</h2>
+    <h2>{{employee.ComputerMake}}</h2>
+    <h2>Trainings</h2>
+    <h3>{{employee.TrainingName}}</h3>
+</div>
+
