--- a/Orientation-API/app/partials/TrainingProgramEdit.html
+++ b/Orientation-API/app/partials/TrainingProgramEdit.html
@@ -1,7 +1,7 @@
 ﻿<h2>{{message}}</h2>
 
 <div id="editTrainings">
-    <form class="form-horizontal" name="userForm">
+    <form class="form-horizontal" name="userForm" ng-submit="updateTrainingProgram(training)">
         <div class="form-group">
             <label for="firstName" class="col-sm-2 control-label">Training Name</label>
             <div class="col-sm-10">
@@ -35,14 +35,14 @@
         <!--<div class="form-group">
             <label for="employeesAttending" class="col-sm-2 control-label">Employees Attending:</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" id="employeesAttending" ng-model="training.etails" placeholder="Employees Attending">
+                <input type="text" class="form-control" id="employeesAttending" ng-model="" placeholder="Employees Attending">
             </div>
         </div>-->
 
 
         <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
-                <button type="submit" class="btn btn-default" ng-click="updateTraining(training)">Update</button>
+                <button type="submit" class="btn btn-default">Update</button>
             </div>
         </div>
     </form>
