--- a/Orientation-API/app/partials/TrainingProgramEdit.html
+++ b/Orientation-API/app/partials/TrainingProgramEdit.html
@@ -32,12 +32,13 @@
                 <input type="text" class="form-control" id="details" ng-model="training.Details" placeholder="Details">
             </div>
         </div>
-        <!--<div class="form-group">
+        <div class="form-group">
             <label for="employeesAttending" class="col-sm-2 control-label">Employees Attending:</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" id="employeesAttending" ng-model="" placeholder="Employees Attending">
+            <div ng-repeat="employee in employees" class="col-sm-10">
+                <input type="text" class="form-control" ng-model="employee.FirstName" placeholder="First Name">
+                <input type="text" class="form-control" ng-model="employee.LastName" placeholder="Last Name">
             </div>
-        </div>-->
+        </div>
 
 
         <div class="form-group">
