delete button functionality is working

--- a/Orientation-API/app/partials/TrainingProgramDelete.html
+++ b/Orientation-API/app/partials/TrainingProgramDelete.html
@@ -1,1 +1,7 @@
 ﻿<h2>{{message}}</h2>
+
+<div>
+    <h3>Are you sure you want to delete {{training.TrainingName}}?</h3>
+    <button class="btn btn-success" ng-click="deleteTrainingProgram(training.TrainingId)">Yes</button>
+    <button class="btn btn-danger" ng-click="noDelete()">No</button>
+</div>
