nevermind button is now working

--- a/Orientation-API/app/partials/TrainingProgramDelete.html
+++ b/Orientation-API/app/partials/TrainingProgramDelete.html
@@ -2,6 +2,6 @@
 
 <div>
     <h3>Are you sure you want to delete {{training.TrainingName}}?</h3>
-    <button class="btn btn-success" ng-click="deleteTrainingProgram(training.TrainingId)">Yes</button>
-    <button class="btn btn-danger" ng-click="noDelete()">No</button>
+    <button class="btn btn-success" ng-click="deleteTrainingProgram(training.TrainingId)">Yes, do it</button>
+    <button class="btn btn-danger" ng-click="nevermindDoNotDelete()">Nevermind</button>
 </div>
