--- a/Orientation-API/app/partials/employeeDetails.html
+++ b/Orientation-API/app/partials/employeeDetails.html
@@ -1,8 +1,29 @@
-﻿<div>
-    <h1>{{employee.FirstName}} {{employee.LastName}}</h1>
-    <h2>{{employee.DepartmentName}}</h2>
-    <h2>{{employee.ComputerMake}}</h2>
-    <h2>Trainings</h2>
-    <h3>{{employee.TrainingName}}</h3>
-</div>
+﻿<h1>Selected Employee:</h1>
+
+<div id="empldeetscontainer">
+    <div class="empDetailTable col-md-6">
+        <table class="table table-condensed ">
+            <tr>
+                <th scope="row">Name:</th>
+                <td>{{employee.FirstName}} {{employee.LastName}}</td>
+            </tr>
+
+            <tr>
+                <th scope="row">Department:</th>
+                <td>{{employee.DepartmentName}} </td>
+            </tr>
+
+            <tr>
+                <th scope="row">Computer Make:</th>
+                <td>{{employee.ComputerMake}} </td>
+            </tr>
+        </table>
+
+        <ul>
+            <p id="heading">Trainings:</p>
+            <li ng-repeat="i in employee.TrainingName">{{i}} </li>
+        </ul>
+    </div>
+ </div>
+
 
