--- a/Orientation-API/app/partials/departments.html
+++ b/Orientation-API/app/partials/departments.html
@@ -8,6 +8,6 @@
 
 <div class="row">
     <div ng-repeat="department in departments" class="col-md-3">
-        <p ng-click="viewDepartmentDetails(department.DepartmentId)">{{department.DepartmentName}}</p>
+        <a ng-click="viewDepartmentDetails(department.DepartmentId)">{{department.DepartmentName}}</a>
     </div>
 </div>
