--- a/Orientation-API/app/partials/employeeDetails.html
+++ b/Orientation-API/app/partials/employeeDetails.html
@@ -23,6 +23,7 @@
             <p id="heading">Trainings:</p>
             <li ng-repeat="i in employee.TrainingName">{{i}} </li>
         </ul>
+        <button class="btn btn-primary" ng-click="employeeEdit(employee.EmployeeId)">Edit Employee</button>
     </div>
  </div>
 
