--- a/Orientation-API/Views/Shared/_Layout.cshtml
+++ b/Orientation-API/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
                     <li><a ng-href="#!/departments">Departments</a></li>
                     <li><a ng-href="#!/employees">Employees</a></li>
                     <li><a ng-href="#!/trainings">Trainings</a></li>
-                    
+
                 </ul>
             </div>
         </div>
@@ -37,6 +37,7 @@
             <p>&copy; @DateTime.Now.Year - Bangazon</p>
         </footer>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.1/moment.js"></script>
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/angular")
