--- a/Orientation-API/app/partials/editemployee.html
+++ b/Orientation-API/app/partials/editemployee.html
@@ -11,10 +11,6 @@
                 <label for="lastName">Last Name</label>
                 <input type="text" class="form-control" id="lastName" ng-model="employeeDetail.LastName" placeholder="Last Name">
             </div>
-            <div class="form-group">
-                <label for="exampleInputFile">Separation Date</label>
-                <input type="date" id="separationDate" ng-model="employeeDetail.SeparationDate" ng-bind="employeeDetail.SeparationDate | date:'mm/dd/yyyy'">
-            </div>
             <div>
                 <label for="exampleInputFile">Department</label>
                 <select ng-model="employeeDetail.DepartmentId">
@@ -28,7 +24,7 @@
 
                 </select>
             </div>
-            <button type="submit" class="btn btn-default" ng-click="editEmployee(newEmployee)">Submit</button>
+            <button type="submit" class="btn btn-default" ng-click="editEmployee(employeeDetail)">Submit</button>
         </form>
     </div>
 </div>
