--- a/Orientation-API/app/partials/editemployee.html
+++ b/Orientation-API/app/partials/editemployee.html
@@ -19,9 +19,8 @@
             </div>
             <div>
                 <label for="exampleInputFile">Computer</label>
-                <select ng-model="employeeDetail.ComputerId" ng-init="computer">
+                <select ng-model="employeeDetail.ComputerId">
                     <option ng-selected="employeeDetail.ComputerId == computer.ComputerId" ng-repeat="computer in unassignedComputers" ng-value="computer.ComputerId">{{computer.ComputerManufacturer}} {{computer.ComputerMake}}</option>
-
                 </select>
             </div>
             <button type="submit" class="btn btn-default" ng-click="editEmployee(employeeDetail)">Submit</button>
